--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -74,7 +74,10 @@ h1 {
 
 .cd-fixed-bg.cd-bg-1 {
   background-image: url("../images/forkliftandpeople.png");
+  background-size: 100%;
+
 }
+
 .header-img{
     // position: absolute;
 }
@@ -113,6 +116,7 @@ h1 {
 .cd-fixed-bg.cd-bg-4 {
     background-image: url("../images/forkliftandpeople.png");
     min-height: 70%;
+    background-size: 100%;
 }
 
 .cd-fixed-bg.cd-bg-5 {
@@ -261,7 +265,9 @@ center > h1 {
 .sr-t:hover {
     background-image: url("../images/Tape-blur-darken-50.png");
     text-shadow: 10px 10px 40px #fff;
+    a:hover {
     color: #fff;
+  }
 }
 
 .sr-o {
@@ -419,9 +425,8 @@ a.product-button {
 // }
 
 .footer {
-    height: 22em;
-    margin-top: 2em;
-    // border: 2px solid black;
+    height: auto;
+    margin-top: 7em;
     right: 0;
     left: 0;
     bottom: 0;
@@ -491,6 +496,20 @@ a.product-button {
     padding-top: 210px;
 }
 
+.mission-header {
+    left: 20%;
+    text-align: center;
+    font-family: 'Playfair Display', serif;
+    text-shadow: 3px 3px black;
+    color: #fff;
+    padding-top: 60px;
+    font-size: 80px;
+    font-weight: bold;
+    background-color: rgba(0, 0, 0, 0.58);
+    width: 100%;
+    height: 400px;
+}
+
 button {
     border: none;
     background-color: #eee;
@@ -523,6 +542,15 @@ button {
 
 .form-control {
     border: 1px solid #696262
+}
+
+.btn-default {
+    border: 1px solid #696262;
+}
+
+.btn-default:hover {
+    background-color: rgba(19, 87, 49, 0.33);
+    border: 1px solid #696262;
 }
 
 .default {
