styling to homepage and footer components

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -100,8 +100,13 @@ h1 {
 
 }
 
-.header-img{
-    // position: absolute;
+.cd-fixed-bg.cd-bg-1.header-img.supporting-header {
+    background-size: 100%;
+    min-height: 300px;
+}
+
+.img-overlay.supporting-overlay {
+    height: 300px;
 }
 
 .img-overlay {
@@ -135,8 +140,8 @@ h1 {
 }
 
 .cd-fixed-bg.cd-bg-4 {
-    background-image: url("../images/bbbn.jpg");
-    min-height: 70%;
+    // background-image: url("../images/bbbn.jpg");
+    min-height: 60%;
     background-size: 100%;
 }
 
@@ -300,8 +305,8 @@ center > h1 {
     font-size: 40px;
     letter-spacing: 7px;
     font-weight: bolder;
-    margin-top: 40px;
-    margin-bottom: 60px;
+    margin-top: 105px;
+    margin-bottom: 120px;
 }
 
 .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t:hover {
@@ -462,6 +467,10 @@ a.product-button {
 //   box-shadow: 0 0 5px rgba(0,0,0,0.35);
 // }
 
+.speedway-is {
+    margin-bottom: 40px;
+}
+
 .footer {
     height: auto;
     margin-top: 2em;
@@ -470,6 +479,10 @@ a.product-button {
     bottom: 0;
     font-size: 13px;
     // border-radius: 55px;
+}
+
+.col-xs-12.col-sm-12.col-md-6.col-lg-6 {
+    background-color: green;
 }
 
 .col-md-2 {
@@ -491,12 +504,15 @@ a.product-button {
 }
 
 .footer-filler {
-    font-family: 'Playfair Display', serif;
+    font-family: 'Muli', sans-serif;
     line-height: 25px;
-    padding-top: 15px;
+    // padding-top: 15px;
+    width: 20%;
+    display: inline-block;
+    float: left;
     p{
-        padding-top: 10px;
-        text-indent: 20px;
+        // padding-top: 10px;
+        // text-indent: 20px;
         line-height: 30px;
     }
 }
@@ -525,13 +541,17 @@ a.product-button {
     box-shadow: 0 0 25px rgba(0,0,0,0.35);
 }
 
-.years {
-    font-size: 90px;
+.second-row {
+    font-size: 80px;
+}
+
+.header-h1.supporting-h1 {
+    left: 40%;
 }
 
 .header-h1  {
     text-align: center;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Open Sans', sans-serif;
     text-shadow: 3px 3px black;
     color: #fff;
     padding-top: 220px;
@@ -540,7 +560,7 @@ a.product-button {
     z-index: 100;
     position: absolute;
     top:0;
-    left:250px;
+    left:175px;
 }
 
 .tape-header  {
@@ -552,14 +572,16 @@ a.product-button {
     left: 20%;
     text-align: center;
     letter-spacing: 5px;
-    font-family: 'Playfair Display', serif;
-    text-shadow: 3px 3px black;
-    color: #fff;
-    padding-top: 10%;
+    font-family: 'Open Sans', sans-serif;
+    // text-shadow: 3px 3px #0D0762;
+    color: #13562F;
+    // padding-top: 10%;
     font-size: 80px;
-    background-color: rgba(40, 52, 88, 0.57);
+    // background-color: rgba(40, 52, 88, 0.57);
+    background-color: rgb(255, 255, 255);
+    transition: all 0.5s ease-out;
     width: 100%;
-    height: 400px;
+    height: 200px;
     h1 {
         font-size: 70px;
         margin-bottom: 0px;
@@ -574,9 +596,8 @@ button {
 }
 
 .address {
-    position: absolute;
+    float: right;
     right: 2.5em;
-    top: 3.3em;
     text-align: right;
 }
 
@@ -723,6 +744,7 @@ video {
     vertical-align: baseline;
     height: 424px;
     margin-left: 30px;
+    margin-bottom: -17px;
 }
 
 .image-boxes {
@@ -794,16 +816,23 @@ form > div {
 }
 
 #contact {
-    background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSPFsjNd-b_wCLpu-WM5XpPOX5KWX5DgcqjWIdqpvi8ykBxGJPJ');
+    // background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSPFsjNd-b_wCLpu-WM5XpPOX5KWX5DgcqjWIdqpvi8ykBxGJPJ');
+    // background-image: url("../images/3pl-person-blur-10-white-50.jpg");
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
     padding-top: 10px;
     padding-bottom: 15px;
-    border-radius: 35px;
+    color: #fff;
+    margin-left: 25%;
+    // border-radius: 35px;
     border: 2px solid black;
-    box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.88);
+    background-color: rgba(10, 7, 103, 0.75);
+    // box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.88);
+    label {
+        color: #fff;
+    }
 }
 
 .copyright {
