--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -510,6 +510,9 @@ a.product-button {
     width: 20%;
     display: inline-block;
     float: left;
+    padding-top: 3px;
+    padding-left: 30px;
+    margin-bottom: -55px;
     p{
         // padding-top: 10px;
         // text-indent: 20px;
@@ -597,9 +600,10 @@ button {
 
 .address {
     float: right;
-    right: 2.5em;
+    /* right: 5.5em; */
     margin-top: 5px;
-    text-align: right;
+    text-align: center;
+    padding-right: 35px;
 }
 
 .container-fluid {
@@ -785,7 +789,11 @@ video {
 .InputMessage {
     width: 531px;
     border-radius: 5px;
+    margin-bottom: 20px;
     clear: both;
+}
+label.InputMessage {
+    margin-bottom: 0;
 }
 
 .submit-button {
@@ -819,33 +827,23 @@ form > div {
 #contact {
     // background-image: url('https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSPFsjNd-b_wCLpu-WM5XpPOX5KWX5DgcqjWIdqpvi8ykBxGJPJ');
     // background-image: url("../images/3pl-person-blur-10-white-50.jpg");
+    clear: both;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
     padding-top: 10px;
     padding-bottom: 15px;
+    margin-top: -55px;
     color: #fff;
-    margin-left: 5%;
+    padding-left: 40px;
+    margin-left: 25%;
     // border-radius: 35px;
     border: 2px solid black;
     background-color: rgb(10, 7, 100);
     // box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.88);
     label {
         color: #fff;
-    }
-}
-@media (max-width: 768px){
-    header {
-        // visibility: hidden;
-    }
-
-    .container-fluid {
-        padding-top: 0;
-    }
-
-    .header-h1 {
-        padding-top: 100px;
     }
 }
 
@@ -868,4 +866,211 @@ form > div {
         text-shadow: 1px 1px #fff;
 
     }
+}
+
+@media (max-width: 1119px) {
+    .list-inline > li {
+        font-size: 17px;
+    }
+    .list-inline {
+        padding-top: 4%;
+    }
+    .logoHolder a img {
+        max-width: 85%;
+    }
+}
+
+@media (max-width: 1046px) {
+    .list-inline > li {
+        font-size: 14px;
+    }
+    .list-inline {
+        padding-top: 4%;
+    }
+
+    .logoHolder a img {
+        max-width: 75%;
+    }
+}
+
+@media (max-width: 975px) {
+    .list-inline {
+        visibility: hidden;
+    }
+
+    .list-inline > li:last-child {
+        visibility: visible;
+        font-size: 20px;
+        position: absolute;
+        top: 4.1em;
+        left: 38%;
+    }
+
+    .logoHolder a img {
+        max-width: 100%;
+        margin-left: 85%;
+    }
+}
+
+@media (max-width: 775px) {
+    .list-inline {
+        visibility: hidden;
+    }
+
+    .list-inline > li:last-child {
+        visibility: visible;
+        font-size: 20px;
+        position: absolute;
+        top: 4.1em;
+        left: 38%;
+    }
+
+    .logoHolder a img {
+        max-width: 100%;
+        margin-left: 85%;
+    }
+}
+
+
+// /* iPhone 4 and 4S (portrait and landscape) ----------- */
+// @media only screen and (min-device-width : 320px) and (max-device-width : 480px){
+// @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2){
+@media (max-width: 768px) {
+    #head {
+        max-width: 100%;
+        width:100%;
+        // transform:translateX(-50%);
+    }
+
+    .logoHolder a {
+        padding: 0 0 0 0.4em;
+    }
+
+    .InputName {
+        width: 100%;
+    }
+
+    center {
+        height: 0px;
+    }
+
+    center > h1 {
+        visibility: hidden;
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
+
+    .cd-fixed-bg.cd-bg-1.header-img {
+        visibility: hidden;
+        min-height: 0%;
+    }
+
+    .logoHolder a img {
+        max-width: 100%;
+        left: 65%;
+    }
+
+    .list-inline {
+        visibility: hidden;
+    }
+
+    .list-inline > li:last-child {
+        visibility: visible;
+        font-size: 20px;
+        position: absolute;
+        top: 4em;
+        left: 38%;
+    }
+
+    .container-fluid {
+        padding-top: 0;
+    }
+
+    .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t {
+    margin-top: 115px;
+    }
+
+    // .header-h1 {
+    //     padding-top: 100px;
+    // }
+
+    #contact {
+        padding-left: 20px;
+        margin-left: 0;
+        margin-top: 0;
+    }
+
+    .cd-fixed-bg.cd-bg-4 {
+        visibility: hidden;
+        min-height: 0%;
+        background-size: 0%;
+    }
+
+    .speedway-is {
+        margin: 0px;
+    }
+
+    .footer-filler p {
+        line-height: 30px;
+        width: 290px;
+        padding-left: 30px;
+    }
+
+    .footer-filler {
+        margin-bottom: 0;
+        padding-left: 5px;
+    }
+
+    .InputMessage {
+        width: 100%;
+    }
+
+    label.InputMessage {
+        margin-bottom: 0;
+    }
+
+    .InputCompany {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    .InputEmail {
+        width: 100%;
+    }
+
+    .InputPhone {
+        width: 100%;
+        margin-left: 0;
+    }
+
+    #contact label {
+        margin-left: 0px;
+    }
+
+    .address {
+        width: 295px;
+        // right: 2.5em;
+        margin-top: 5px;
+        text-align: center;
+        padding-left: 40px;
+    }
+
+    h4 {
+        margin-left: 24%;
+    }
+}
+
+// /* iPhone 5 and 5S (portrait and landscape) ----------- */
+// @media only screen and (min-device-width: 320px) and (max-device-width: 568px) and (-webkit-min-device-pixel-ratio: 2) {
+//
+// }
+
+/* Desktops and laptops ----------- */
+@media only screen  and (min-width : 1224px) {
+/* Styles */
+}
+
+/* Large screens ----------- */
+@media only screen  and (min-width : 1824px) {
+/* Styles */
 }
