--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -97,16 +97,15 @@ h1 {
 .cd-fixed-bg.cd-bg-1 {
   background-image: url("../images/forkliftandpeople.png");
   background-size: 100%;
-
 }
 
-.cd-fixed-bg.cd-bg-1.header-img.supporting-header {
+.cd-fixed-bg.cd-bg-5.header-img.supporting-header {
     background-size: 100%;
-    min-height: 300px;
+    min-height: 350px;
 }
 
 .img-overlay.supporting-overlay {
-    height: 300px;
+    height: 350px;
 }
 
 .img-overlay {
@@ -146,11 +145,12 @@ h1 {
 }
 
 .cd-fixed-bg.cd-bg-5 {
-  background-image: url("../images/Tape-high-vibrance.png");
-  height:300px;
-  bottom:0px;
-  margin-right: -20px;
-  margin-top: -20px;
+  background-image: url("../images/Tape-blur-3-shade-40.png");
+  background-size: 100%;
+  // height:300px;
+  // bottom:0px;
+  // margin-right: -20px;
+  // margin-top: -20px;
 
 }
 
@@ -469,6 +469,7 @@ a.product-button {
 
 .speedway-is {
     margin-bottom: 40px;
+    margin-top: 40px;
 }
 
 .footer {
@@ -482,7 +483,7 @@ a.product-button {
 }
 
 .col-xs-12.col-sm-12.col-md-6.col-lg-6 {
-    background-color: green;
+    background-color: #f5f5f5;
 }
 
 .col-md-2 {
@@ -552,14 +553,28 @@ a.product-button {
     left: 40%;
 }
 
+.supporting-description {
+    padding: 70px 0px 70px 30px;
+    background-color: #f5f5f5;
+    height: 540px;
+}
+
+.center-content {
+    text-align: center;
+    padding: 70px;
+    letter-spacing: 2px;
+    font-size: 50px;
+    font-style: italic;
+}
+
 .header-h1  {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     text-shadow: 3px 3px black;
     color: #fff;
-    padding-top: 220px;
+    padding-top: 230px;
     font-size: 80px;
-    font-weight: bold;
+    font-weight: bolder;
     z-index: 100;
     position: absolute;
     top:0;
@@ -833,10 +848,10 @@ form > div {
     background-repeat: no-repeat;
     background-position: center center;
     padding-top: 10px;
-    padding-bottom: 15px;
+    padding-bottom: 20px;
     margin-top: -55px;
     color: #fff;
-    padding-left: 40px;
+    padding-left: 45px;
     margin-left: 25%;
     // border-radius: 35px;
     border: 2px solid black;
@@ -967,7 +982,7 @@ form > div {
 
     .logoHolder a img {
         max-width: 100%;
-        left: 65%;
+        runleft: 65%;
     }
 
     .list-inline {
