--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -64,12 +64,12 @@ body {
     font-size: 20px;
 }
 
-.list-inline> li > a {
+.list-inline > li > a {
     font-family: 'Muli', sans-serif;
     font-weight: bold;
     transition: 0.3s ease;
     padding: 5px;
-    color: #13562F;
+    color: #090a72;
 }
 
 .list-inline> li > a:hover {
@@ -106,6 +106,12 @@ h1 {
 
 .img-overlay.supporting-overlay {
     height: 350px;
+}
+
+.img-overlay.supporting-overlay-video {
+    width: 570px;
+    height: 300px;
+    margin-left: 55px;
 }
 
 .img-overlay {
@@ -145,13 +151,22 @@ h1 {
 }
 
 .cd-fixed-bg.cd-bg-5 {
-  background-image: url("../images/Tape-blur-3-shade-40.png");
+  background-image: url("../images/Tape-blur-3-shade-50-66.png");
   background-size: 100%;
   // height:300px;
   // bottom:0px;
   // margin-right: -20px;
   // margin-top: -20px;
+}
 
+.cd-fixed-bg.cd-bg-bulk {
+    background-image: url("../images/drybulk-blur-10-shade-50.jpg");
+    background-size: 100%;
+}
+
+.cd-fixed-bg.cd-bg-bulk.header-img.supporting-header {
+    background-size: 100%;
+    min-height: 350px;
 }
 
 .cd-scrolling-bg {
@@ -172,6 +187,22 @@ h1 {
     background-repeat: no-repeat;
 	background-position: center center;
     background-size: cover;
+}
+
+.extra-letter-space {
+    letter-spacing: 1px;
+    text-transform: none;
+    font-size: 18px;
+    line-height: 28px;
+}
+
+.bulk-header {
+    left: 9% !important;
+    padding-top: 160px !important;
+}
+
+.supporting-right-column {
+    padding: 60px 40px 53px 40px !important;
 }
 
 a address {
@@ -440,8 +471,29 @@ a.product-button {
     font-size: 150%;
 }
 
+.supporting-center-h1 {
+    margin-top: 55px;
+    margin-bottom: 10px;
+}
+
 .product-description {
     font-size: 12px;
+}
+
+.supporting-product-description {
+    font-size: 20px;
+    letter-spacing: 2.5px;
+    line-height: 35px;
+}
+
+.product-description-header {
+    color: #f5f5f5;
+    font-size: 30px;
+    z-index: 100;
+    padding-top: 190px;
+    text-transform: none;
+    letter-spacing: 2px;
+    font-weight: 300;
 }
 
 .glyphicon-bold {
@@ -483,7 +535,10 @@ a.product-button {
 }
 
 .col-xs-12.col-sm-12.col-md-6.col-lg-6 {
-    background-color: #f5f5f5;
+    background-color: #7b0e0e;
+    color: #fff;
+    padding-top: 20px;
+    padding-bottom: 35px;
 }
 
 .col-md-2 {
@@ -551,11 +606,17 @@ a.product-button {
 
 .header-h1.supporting-h1 {
     left: 40%;
+    padding-top: 50px;
+}
+
+.bold{
+    font-weight: bold;
+    letter-spacing: 1px;
 }
 
 .supporting-description {
-    padding: 70px 0px 70px 30px;
-    background-color: #f5f5f5;
+    padding: 70px 0px 70px 0px;
+    background-color: #fff;
     height: 540px;
 }
 
@@ -570,7 +631,7 @@ a.product-button {
 .header-h1  {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
-    text-shadow: 3px 3px black;
+    text-shadow: 3px 3px #110a66;
     color: #fff;
     padding-top: 230px;
     font-size: 80px;
@@ -760,6 +821,8 @@ button {
 }
 
 video {
+    border-top: 6px solid black;
+    border-bottom: 6px solid black;
     display: inline-block;
     vertical-align: baseline;
     height: 424px;
