--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -532,6 +532,9 @@ a.product-button {
 //   box-shadow: 0 0 5px rgba(0,0,0,0.35);
 // }
 
+iframe {
+}
+
 .speedway-is {
     margin-bottom: 40px;
     margin-top: 40px;
@@ -540,14 +543,13 @@ a.product-button {
 .footer-background {
     clear: both;
     background: url("http://kkvplusz.hu/wp-content/uploads/2013/04/raktar.jpg") !important;
-    background-position: center center;
     width: 100%;
     background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
     color: #fff !important;
     height: 360px;
-    padding: 15px;
+    padding-top: 15px;
 }
 
 .footer {
@@ -557,7 +559,7 @@ a.product-button {
     margin-right: -15px;
     bottom: 0;
     font-size: 13px;
-    background-color: #ddd;
+    // background-color: #ddd;
     // height: auto;
     // margin-top: 2em;
     // right: 0;
@@ -580,7 +582,7 @@ a.product-button {
 }
 
 .col-md-6 {
-    padding: 0 30px 12px;
+    // padding: 0 30px 12px;
     // margin-bottom: 2em;
 }
 
@@ -955,7 +957,7 @@ form > div {
     // margin-top: -55px;
     color: #fff;
     padding-left: 45px;
-    margin-left: 25%;
+    // margin-left: 25%;
     // border-radius: 35px;
     border: 2px solid black;
     background-color: rgb(10, 7, 100);
