updates to tape and bulk components, began assembly component

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -97,6 +97,8 @@ h1 {
 .cd-fixed-bg.cd-bg-1 {
   background-image: url("../images/forkliftandpeople.png");
   background-size: 100%;
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .cd-fixed-bg.cd-bg-5.header-img.supporting-header {
@@ -117,11 +119,11 @@ h1 {
 .img-overlay {
     content:"";
     position: absolute;
-    height:455px;
+    height:520px;
     top:115px;
-    left:14.5px;
+    left:0.05px;
     bottom:0px;
-    right:14.5px;
+    right:0.05px;
     background-color: rgba(40, 52, 88, 0.57);
     z-index: 10;
     transition: all 0.5s ease-out;
@@ -145,9 +147,10 @@ h1 {
 }
 
 .cd-fixed-bg.cd-bg-4 {
-    // background-image: url("../images/bbbn.jpg");
     min-height: 50%;
     background-size: 100%;
+    background-color: #155131;
+    margin: 0 -15px 0 -15px;
 }
 
 .cd-fixed-bg.cd-bg-5 {
@@ -162,6 +165,11 @@ h1 {
 // .cd-fixed-bg.cd-bg-5.footer.footer-filler p > a > strong {
 //     color: #fff !important;
 // }
+
+.negative-margin {
+    margin-left: -15px;
+    margin-right: -15px;
+}
 
 .cd-fixed-bg.cd-bg-bulk {
     background-image: url("../images/drybulk-blur-10-shade-50-66.jpg");
@@ -211,7 +219,7 @@ h1 {
 }
 
 .supporting-right-column {
-    padding: 45px 40px 53px 40px !important;
+    padding: 45px 40px 0px 40px !important;
 }
 
 a address {
@@ -288,6 +296,11 @@ a address {
 //     color: #fff;
 // }
 
+.explore {
+    padding-top: 110px;
+    padding-bottom: 100px;
+}
+
 .middle-explore {
     margin-bottom: 20px;
 }
@@ -331,6 +344,13 @@ border-right: none;
     transition: 1s;
 }
 
+center {
+    padding-top: 70px;
+    padding-bottom: 60px;
+    margin: 0 -15px 0 -15px;
+    background-color: #155131;
+}
+
 #onhover {
   display: none;
   transition: display 1s;
@@ -349,8 +369,9 @@ center > h1 {
     font-size: 40px;
     letter-spacing: 7px;
     font-weight: bolder;
-    margin-top: 105px;
-    margin-bottom: 120px;
+    // margin-top: 105px;
+    // margin-bottom: 120px;
+    color: #f5f5f5;
 }
 
 .col-xs-12.col-sm-6.col-lg-4.product-button.sr-t:hover {
@@ -493,10 +514,21 @@ a.product-button {
     font-size: 12px;
 }
 
+.sup-image {
+    height: 420px;
+    border-radius: 5px;
+    padding-left: 45px;
+    padding-right: 45px;
+}
+
 .supporting-product-description {
     font-size: 20px;
     letter-spacing: 2.5px;
     line-height: 35px;
+}
+
+.supporting-left-column {
+    padding: 35px 60px 0px 60px !important;
 }
 
 .product-description-header {
@@ -507,6 +539,7 @@ a.product-button {
     text-transform: none;
     letter-spacing: 2px;
     font-weight: 300;
+    margin-bottom: 45px;
 }
 
 .glyphicon-bold {
@@ -533,28 +566,72 @@ a.product-button {
 // }
 
 iframe {
+    height: 295px;
+    width: 600px;
 }
 
 .speedway-is {
-    margin-bottom: 40px;
-    margin-top: 40px;
+    border: 2px solid #fff;
+    border-radius: 55px;
+    margin: 0 -15px 0 -15px;
+    padding-bottom: 25px;
+    background-color: #155131;
+    color: #fff;
+    width: 500px;
+}
+
+h1.speedway-is:hover {
+    border: 2px solid #9097a9;
+    color: #9097a9;
+}
+
+.bottom-tag {
+    padding-top: 20px;
+    padding-left: 45px;
+    padding-right:45px;
+    font-weight: 200;
+    text-transform: none;
+    text-align: left;
+    line-height: 43px;
+}
+
+.call-button    {
+    padding-top: 25px;
+    button {
+        padding: 20px;
+        background-color: #e0e0e0;
+        font-size: 25px;
+    }
+}
+
+.call-button button:hover {
+    background-color: #151515;
+}
+
+.action {
+    height: 165px;
+    text-align: center;
+    background-color: #e0e0e0;
+    color: black;
+    font-size: 28px;
+    padding: 20px;
 }
 
 .footer-background {
     clear: both;
-    background: url("http://kkvplusz.hu/wp-content/uploads/2013/04/raktar.jpg") !important;
+    background: url("../images/backdrop.jpg") !important;
     width: 100%;
     background-size: cover;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
     color: #fff !important;
-    height: 360px;
-    padding-top: 15px;
+    height: 450px;
+    padding-top: 50px;
 }
 
 .footer {
     height: auto;
-    padding-top: 2em;
+    // padding-top: 2em;
     margin-left: -15px;
     margin-right: -15px;
     bottom: 0;
@@ -642,9 +719,15 @@ iframe {
     font-size: 80px;
 }
 
+.tape-center {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    background-color: transparent;
+}
+
 .header-h1.supporting-h1 {
     left: 40%;
-    padding-top: 50px;
+    padding-top: 170px;
 }
 
 .bold{
@@ -652,10 +735,19 @@ iframe {
     letter-spacing: 1px;
 }
 
+.left-10 {
+    padding-left: 10px;
+}
+
 .supporting-description {
-    padding: 70px 0px 70px 0px;
-    // background-color: #fff;
-    height: 650px;
+    padding: 40px 0px 40px 0px;
+    height: 550px;
+    background-color: #155131;
+}
+
+.supporting-center {
+    padding-top: 0px;
+    padding-bottom: 60px;
 }
 
 .center-content {
@@ -670,8 +762,8 @@ iframe {
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     text-shadow: 3px 3px #110a66;
-    color: #fff;
-    padding-top: 230px;
+    color: #f5f5f5;
+    padding-top: 295px;
     font-size: 80px;
     font-weight: bolder;
     z-index: 100;
@@ -685,20 +777,32 @@ iframe {
     padding-top: 210px;
 }
 
+.mission {
+    padding-top: 110px;
+    padding-bottom: 10px;
+}
+
+.cr {
+    padding-top: 15px;
+    padding-bottom: 10px;
+}
+
 .mission-header {
     left: 20%;
     text-align: center;
     letter-spacing: 5px;
     font-family: 'Open Sans', sans-serif;
     // text-shadow: 3px 3px #0D0762;
-    color: #13562F;
+    color: #f5f5f5;
     // padding-top: 10%;
     font-size: 80px;
     // background-color: rgba(40, 52, 88, 0.57);
-    background-color: rgb(255, 255, 255);
+    background-color: #155131;
     transition: all 0.5s ease-out;
     width: 100%;
     height: 200px;
+    margin-left: -15px;
+    margin-right: -15px;
     h1 {
         font-size: 70px;
         margin-bottom: 0px;
@@ -731,7 +835,7 @@ a address:hover{
   background-attachment: fixed;
   background-size: cover;
   // background-image: url("http://www.goglo.net/images/fp-rs-images-376x200/Warehouse_and_Cargo_Insurance.jpg");
-  height: 570px;
+  height: 635px;
   color: black;
   text-transform: uppercase;
   padding-top: 115px;
@@ -752,8 +856,9 @@ a address:hover{
 }
 
 .btn-default:hover {
-    background-color: rgba(3, 10, 97, 0.25);
-    border: 1px solid #696262;
+    background-color: #477054;
+    border: 1px solid #597e65;
+    color: #fff;
 }
 
 .default {
@@ -959,12 +1064,46 @@ form > div {
     padding-left: 45px;
     // margin-left: 25%;
     // border-radius: 35px;
-    border: 2px solid black;
-    background-color: rgb(10, 7, 100);
+    // border: 2px solid black;
+    // background-color: rgb(10, 7, 100);
     // box-shadow: 5px 5px 40px rgba(0, 0, 0, 0.88);
     label {
         color: #fff;
     }
+}
+
+#contact h4 {
+    font-size: 33px;
+    margin-top: 0;
+}
+
+@-webkit-keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
+@-moz-keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
+@keyframes fadeIn { from { opacity:0; opacity: 1\9; /* IE9 only */ } to { opacity:1; } }
+
+.fade-in {
+	opacity:0;  /* make things invisible upon start */
+	-webkit-animation:fadeIn ease-in 1;  /* call our keyframe named fadeIn, use animattion ease-in and repeat it only 1 time */
+	-moz-animation:fadeIn ease-in 1;
+	animation:fadeIn ease-in 1;
+
+	-webkit-animation-fill-mode:forwards;  /* this makes sure that after animation is done we remain at the last keyframe value (opacity: 1)*/
+	-moz-animation-fill-mode:forwards;
+	animation-fill-mode:forwards;
+
+	-webkit-animation-duration:1s;
+	-moz-animation-duration:1s;
+	animation-duration:1s;
+}
+
+.fade-in.sup-context {
+-webkit-animation-delay: 0.7s;
+-moz-animation-delay: 0.7s;
+animation-delay: 0.7s;
+}
+
+.footer-wrapper {
+    height: 345px;
 }
 
 .copyright {
@@ -973,29 +1112,30 @@ form > div {
     bottom: 0;
     margin-top: 7px;
     width: 100%;
+    letter-spacing: 1px;
     // font-family: 'Homemade Apple', cursive;
-    color: black;
-    text-shadow: 1px 1px #fff;
-    font-weight: bolder;
+    // color: #fff;
+    // text-shadow: 1px 1px #fff;
+    // font-weight: bolder;
     a{
         font-family: 'Homemade Apple', cursive;
         text-transform: lowercase;
         letter-spacing: 2px;
-        color: black;
+        color: #fff;
         font-weight: bolder;
-        text-shadow: 1px 1px #fff;
+        // text-shadow: 1px 1px #fff;
 
     }
 }
 
 .cr-second {
-    color: #222073;
+    color: #fff;
     font-weight: 700;
     // color: #fff;
     // text-shadow: 1px 1px black;
 
     a{
-        color: #222073;
+        color: #fff;
         font-weight: 700;
         // color: #fff;
         // text-shadow: 1px 1px black;
@@ -1010,8 +1150,47 @@ form > div {
     .list-inline {
         padding-top: 4%;
     }
+    .list-inline > li > a {
+        font-size: 20px;
+        padding: 0;
+    }
     .logoHolder a img {
         max-width: 85%;
+    }
+    .header-h1 {
+        left: 100px;
+    }
+    p.product-description {
+        padding-left: 10px;
+        padding-right: 10px;
+        font-size: 14px;
+    }
+    .InputName {
+        width: 100%;
+    }
+    .InputCompany {
+        width: 100%;
+        margin-left: 0;
+    }
+    .InputEmail {
+        width: 100%;
+    }
+    .InputPhone {
+        width: 100%;
+        margin-left: 0;
+    }
+    .InputMessage {
+        width: 100%;
+    }
+    #contact label {
+        margin: 0;
+        font-size: 14px;
+    }
+    .footer-background {
+        height: 550px;
+    }
+    iframe {
+        height: 481px;
     }
 }
 
