--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -515,8 +515,9 @@ a.product-button {
 }
 
 .sup-image {
+    border-radius: 207px !important;
+    border: 10px solid transparent;
     height: 420px;
-    border-radius: 5px;
     padding-left: 45px;
     padding-right: 45px;
 }
@@ -646,6 +647,10 @@ h1.speedway-is:hover {
     // border-radius: 55px;
 }
 
+.assembly-header {
+    left: 25% !important;
+}
+
 .col-xs-12.col-sm-12.col-md-6.col-lg-6 {
     // background-color: #7b0e0e;
     color: #fff;
@@ -656,6 +661,28 @@ h1.speedway-is:hover {
 .col-md-2 {
     margin: 0 auto;
     border-radius: 55px;
+}
+
+.col-md-4 {
+    padding: 0;
+    text-align: center;
+}
+
+.middle-border {
+    border: 10px solid #151515;
+    border-radius: 42px;
+
+}
+
+.dark {
+    background-color: #151515;
+    padding: 55px;
+    text-align: center;
+}
+
+.col-md-4 img {
+    display: inline-block;
+    height: 280px;
 }
 
 .col-md-6 {
@@ -737,6 +764,10 @@ h1.speedway-is:hover {
 
 .left-10 {
     padding-left: 10px;
+}
+
+.assembly-descript {
+    height: 350px !important;
 }
 
 .supporting-description {
