--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,7 +54,7 @@ body {
     vertical-align: middle;
     letter-spacing: 2px;
     padding-right: 2%;
-    padding-top: 3%;
+    padding-top: 1%;
 }
 
 .list-inline > li {
@@ -219,7 +219,7 @@ h1 {
 }
 
 .supporting-right-column {
-    padding: 45px 40px 0px 40px !important;
+    padding: 15px 40px 0px 40px !important;
 }
 
 a address {
@@ -523,17 +523,36 @@ a.product-button {
 }
 
 .co-sup-image {
-    border-radius: 155px !important;
+    border-radius: 20px !important;
     border: 10px solid transparent;
     height: 420px;
     padding-left: 0px;
     padding-right: 0px;
 }
 
+.supporting-co-column-1 {
+    padding: 15px 20px 0px 80px !important;
+    height: 200px;
+}
+
+.shadow {
+    text-shadow: 2px 2px 2px black;
+}
+
 .supporting-product-description {
-    font-size: 20px;
-    letter-spacing: 2.5px;
+    padding-top: 30px;
+    font-size: 25px;
+    letter-spacing: 1px;
     line-height: 35px;
+    text-transform: none;
+    font-weight: 100;
+}
+
+h3, .h3 {
+    font-size: 30px;
+    text-transform: none;
+    letter-spacing: 1px;
+    font-weight: 400;
 }
 
 .supporting-left-column {
@@ -590,6 +609,11 @@ iframe {
     width: 585px;
 }
 
+.tape-video {
+    width: 600px !important;
+    height: 415px !important;
+}
+
 .speedway-is {
     border: 2px solid #fff;
     border-radius: 55px;
@@ -607,16 +631,16 @@ h1.speedway-is:hover {
 
 .bottom-tag {
     padding-top: 20px;
-    padding-left: 45px;
-    padding-right:45px;
+    padding-left: 35px;
+    padding-right:35px;
     font-weight: 200;
     text-transform: none;
     text-align: left;
     line-height: 43px;
 }
 
-.call-button    {
-    padding-top: 25px;
+.call-button {
+    padding-top: 5px;
     button {
         padding: 20px;
         background-color: #e0e0e0;
@@ -626,15 +650,38 @@ h1.speedway-is:hover {
 
 .call-button button:hover {
     background-color: #151515;
+    border: #155131
 }
 
 .action {
-    height: 165px;
+    height: 190px;
     text-align: center;
     background-color: #e0e0e0;
     color: black;
     font-size: 28px;
-    padding: 20px;
+    padding: 35px;
+}
+
+.top-padding-7 {
+    padding-top: 7px !important;
+}
+
+h1.fade-in.sup-context {
+    font-weight: 100;
+    line-height: 50px;
+    font-size: 53px;
+    padding: 0;
+    padding-left: 6px;
+    text-transform: none;
+    letter-spacing: 1px;
+    // background-color: #2c6246;
+    /* outline: 24px solid #fff; */
+    border-radius: 6px;
+}
+
+.assembly-action {
+    padding-left: 0px !important;
+    padding-right: 0px !important;
 }
 
 .footer-background {
@@ -692,13 +739,12 @@ h1.speedway-is:hover {
 }
 
 .middle-border {
-    border: 10px solid #151515;
     border-radius: 42px;
-
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.35);
 }
 
-.dark {
-    background-color: #151515;
+.light {
+    background-color: #fff;
     padding: 55px;
     text-align: center;
 }
@@ -784,13 +830,39 @@ h1.speedway-is:hover {
     left: 24% !important;
 }
 
+.project-managers {
+    font-weight: 100;
+}
+
+.bulk-project {
+    padding-left: 5px !important;
+    padding-right: 36px !important;
+}
+
+.no-top-padding {
+    padding-top: 0px !important;
+}
+
+.assembly-project {
+    padding-left: 38px !important;
+    padding-right: 5px !important;
+}
+
 .bold{
     font-weight: bold;
     letter-spacing: 1px;
 }
 
+.left-20 {
+    padding-left: 20px;
+}
+
 .left-10 {
     padding-left: 10px;
+}
+
+.left-6 {
+    padding-left: 6px;
 }
 
 .assembly-descript {
@@ -806,6 +878,7 @@ h1.speedway-is:hover {
 .supporting-center {
     padding-top: 0px;
     padding-bottom: 60px;
+    text-align: left;
 }
 
 .supporting-center-assembly {
